# hsp

./: .gitignore  Containerfile  README.md  analysis.R  environment.yml  fix_gym.sh  flake.nix  pyproject.toml  run.sh  shell.nix  test.sh
hsp/: action_utils.py  data.py  env_wrappers.py  griddle.py  main.py  models.py  multi_threading.py  play.py  self_play.py  trainer.py  utils.py
hsp/algorithms/: networks.py  ppo.py  reinforce.py  vpg.py
hsp/games/: counter.yaml  countergrid.yaml  doggo.yaml
