[tool.poetry]
name = "hsp"
version = "0.1.0"
description = ""
authors = ["Josh Rule <joshua.s.rule@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8, <3.12"
gym = {extras = ["classic_control", "other"], version = "^0.25"}
numpy = "*"
torch = [
     {version = "^2.0.1", platform = "darwin"},
     {version = "^2.0.1", platform = "linux", source = "torch"},
     {version = "^2.0.1", platform = "win32", source = "torch"},
]
scipy = "^1.10.1"

# Awkward solution to the fact that griddly has different dependencies in
# `requirements.txt` and `setup.py`.
# source: https://stackoverflow.com/questions/73904539
[tool.poetry.group.griddly]

[tool.poetry.group.griddly.dependencies]
griddly = "1.6.6"
pyglet = "*"
matplotlib = ">=3.3.3"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
